Prevents zooming on mobile input

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -196,6 +196,10 @@ select {
   padding: 2em;
 }
 
+.emulator-container {
+  overscroll-behavior: contain;
+}
+
 .read-the-docs {
   color: #888;
 }
